# flightsql-odbc

./: CMakeLists.txt  build_linux.sh  build_osx.sh
flight_sql/: CMakeLists.txt  flight_sql_get_tables_reader.h  flight_sql_get_type_info_reader.h  flight_sql_statement_get_columns.h  flight_sql_statement_get_type_info.h  utils.h
odbcabstraction/: CMakeLists.txt
odbcabstraction/include/odbcabstraction/spi/: connection.h
